--- a/films/app/assets/stylesheets/films.scss
+++ b/films/app/assets/stylesheets/films.scss
@@ -62,53 +62,38 @@ article > header {
 
 .hero-block {
   position: relative;
-  overflow: hidden;
-}
-
-.hero-logo-container {
-  float: left;
-  width: 25%;
-  padding: 1rem;
-}
-
-.hero-logo-container > .hero-logo {
-  display: block;
-  width: 150px;
-  margin: auto;
-}
-
-.hero-title-container {
-  float: left;
-  width: 75%;
-}
-
-.hero-title-container > .hero-title {
-  font-size: 3rem;
-  margin: 2rem 0 0;
-  color: $title-red;
-}
-
-.hero-title-container > .hero-tagline {
-  color: $subtitle-grey;
-  margin: 0.25rem 0;
-}
+  overflow: hidden; }
+  .hero-logo-container {
+    float: left;
+    width: 25%;
+    padding: 1rem; }
+    .hero-logo-container > .hero-logo {
+    display: block;
+    width: 150px;
+    margin: auto; }
+  .hero-title-container {
+    float: left;
+    width: 75%; }
+    .hero-title-container > .hero-title {
+      font-size: 3rem;
+      margin: 2rem 0 0;
+      color: $title-red; }
+    .hero-title-container > .hero-tagline {
+      color: $subtitle-grey;
+      margin: 0.25rem 0; }
 
 .article-poster {
     float: left;
     width: 25%;
-    margin-right: 1.5rem;
-}
-
-.article-title > h2 {
-    font-size: 1.2em;
-    color: $subtitle-grey;
-}
-
-.article-title > h1 {
+    margin-right: 1.5rem; }
+  .article-title > h1 {
     font-size: 2rem;
     margin-bottom: 0;
-    color: $title-red;
-}
+    color: $title-red; }
+  .article-title > h2 {
+      font-size: 1.2em;
+      color: $subtitle-grey; }
+
 
 // This mixin provides a fancier clearfix than using the overflow property!
 @mixin clearfix {
