Fixed some nesting

--- a/films/app/assets/stylesheets/_base.scss
+++ b/films/app/assets/stylesheets/_base.scss
@@ -45,3 +45,10 @@ article > header {
   @include clearfix;
   // overflow: auto;
 }
+
+
+.home {
+  height: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
