--- a/films/app/assets/stylesheets/_hero.scss
+++ b/films/app/assets/stylesheets/_hero.scss
@@ -1,13 +1,7 @@
 
-.home {
-  height: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
 .hero-block {
   position: relative;
-  @include clearfix; }
+  @include clearfix;
   .hero-logo-container {
     float: left;
     width: 25%;
@@ -18,7 +12,7 @@
     margin: auto; }
   .hero-title-container {
     float: left;
-    width: 75%; }
+    width: 75%;
     .hero-title-container > .hero-title {
       font-size: 3rem;
       margin: 2rem 0 0;
@@ -26,3 +20,5 @@
     .hero-title-container > .hero-tagline {
       color: $subtitle-grey;
       margin: 0.25rem 0; }
+    }
+}
